add enable-preview